test/sema/compare-void-type.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void f(void* a, void* b) {
    // CHECK: [[@LINE+1]]:8: error: invalid operands 'void' and 'void' to '=='
    *a == *b;
}
